[package]
name = "crkbd-rp2040-keyberon"
version = "0.1.0"
authors = ["Cameron Buss"]
edition = "2021"
description = "Keyboard firmware for crkbd with Sparkfun Pro Micro RP2040"
keywords = ["keyboard", "crkbd", "rp2040", "corne"]
categories = ["embedded", "no-std"]
license = "MIT"


[dependencies]
cortex-m-rt = { version = "0.7.0", features = ["device"] }
cortex-m = "0.7.3"
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", rev = "9d56062e447957f7304c31cbe7153abfe70a4f28", features = ["rt"] }
embedded-time = "0.12.0"
usb-device= "0.2.8"
panic-halt= "0.2.0"
embedded-hal ="0.2.5"
cortex-m-rtic = "0.6.0-rc.4"
rp2040-boot2 = "0.2"
keyberon = { path = "./../keyberon" }

[profile.dev]
lto = true
incremental = false
opt-level = "z"
debug = true

[profile.release]
lto = true
incremental = false
